<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">
    <LinearLayout
        android:id="@+id/container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="jp.co.eagler.nicole.introdonist.MainActivity"
        tools:ignore="MergeRootFrame" >

        <Space android:layout_width="match_parent" android:layout_height="1px" />
        <View android:layout_width="match_parent" android:layout_height="1px" android:background="@android:color/black" />
        <Space android:layout_width="match_parent" android:layout_height="1px" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false"
            android:gravity="left"
            android:inputType="none"
            android:text="@string/app_name_title"
            android:textStyle="italic"
            android:textSize="12sp"
            android:layout_margin="2dp"
            android:textColor="@android:color/black" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false"
            android:gravity="center"
            android:inputType="none"
            android:text="@string/app_name_4_credit"
            android:textStyle="italic"
            android:textSize="20sp"
            android:textColor="@android:color/black" />
        <TextView
            android:id="@+id/app_version_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false"
            android:gravity="center"
            android:inputType="none"
            android:text="@string/app_name"
            android:textStyle="italic"
            android:textSize="20sp"
            android:textColor="@android:color/black" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false"
            android:gravity="center"
            android:inputType="none"
            android:text="@string/app_producer"
            android:textStyle="italic"
            android:textSize="20sp"
            android:textColor="@android:color/black" />
        <Space android:layout_width="match_parent" android:layout_height="1px" />
        <View android:layout_width="match_parent" android:layout_height="1px" android:layout_margin="2dp" android:background="@android:color/black" />
        <Space android:layout_width="match_parent" android:layout_height="1px" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false"
            android:gravity="left"
            android:inputType="none"
            android:text="@string/app_icon_org_title"
            android:textStyle="italic"
            android:textSize="12sp"
            android:layout_margin="2dp"
            android:textColor="@android:color/black" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false"
            android:gravity="center"
            android:inputType="none"
            android:text="@string/app_icon_org_author"
            android:textStyle="italic"
            android:textSize="20sp"
            android:textColor="@android:color/black" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false"
            android:gravity="center"
            android:inputType="none"
            android:text="@string/app_icon_org_id"
            android:textStyle="italic"
            android:textSize="20sp"
            android:textColor="@android:color/black" />
        <Space android:layout_width="match_parent" android:layout_height="1px" />
        <View android:layout_width="match_parent" android:layout_height="1px" android:layout_margin="2dp" android:background="@android:color/black" />
        <Space android:layout_width="match_parent" android:layout_height="1px" />
    </LinearLayout>
</ScrollView>

